--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -3,16 +3,43 @@
 server.port=8082
 
 spring.application.name=api-gateway
-spring.cloud.gateway.discovery.locator.enabled=true
-spring.cloud.gateway.discovery.locator.lower-case-service-id=true
+token.secret = verysecret234secret23isthe2109secretest0294secret99292
+#spring.cloud.gateway.discovery.locator.enabled=true
+#spring.cloud.gateway.discovery.locator.lower-case-service-id=true
 
 #route will happen only if both predicate conditions are correct
 spring.cloud.gateway.routes[0].id=users-status-check
 spring.cloud.gateway.routes[0].uri=lb://users-ws
-spring.cloud.gateway.routes[0].predicates[0]=Path=/users/status/check
-spring.cloud.gateway.routes[0].predicates[1]=Method=/GET
+spring.cloud.gateway.routes[0].predicates[0]=Path=/users-ws/users/status/check
+spring.cloud.gateway.routes[0].predicates[1]=Method=GET
+#has some token
+spring.cloud.gateway.routes[0].predicates[2]=Header=Authorization, Bearer (.*)
 spring.cloud.gateway.routes[0].filters[0]=RemoveRequestHeader=Cookie
-#spring.cloud.gateway.routes[0].filters[1]=RewritePath=/users-ws/(?<segment>.*), /$\{segment}
+spring.cloud.gateway.routes[0].filters[1]=RewritePath=/users-ws/(?<segment>.*), /$\{segment}
+spring.cloud.gateway.routes[0].filters[2]=AuthHeaderFilter
 
+#create user
+spring.cloud.gateway.routes[1].id=users-ws
+spring.cloud.gateway.routes[1].uri=lb://users-ws
+spring.cloud.gateway.routes[1].predicates[0]=Path=/users-ws/users
+spring.cloud.gateway.routes[1].predicates[1]=Method=POST
+spring.cloud.gateway.routes[1].filters[0]=RemoveRequestHeader=Cookie
+spring.cloud.gateway.routes[1].filters[1]=RewritePath=/users-ws/(?<segment>.*), /$\{segment}
 
+#user login
+spring.cloud.gateway.routes[2].id=users-ws-login
+spring.cloud.gateway.routes[2].uri=lb://users-ws
+spring.cloud.gateway.routes[2].predicates[0]=Path=/users-ws/users/login
+spring.cloud.gateway.routes[2].predicates[1]=Method=POST
+spring.cloud.gateway.routes[2].filters[0]=RemoveRequestHeader=Cookie
+spring.cloud.gateway.routes[2].filters[1]=RewritePath=/users-ws/(?<segment>.*), /$\{segment}
 
+#token validator
+spring.cloud.gateway.routes[3].id=users-ws-get-update-delete
+spring.cloud.gateway.routes[3].uri=lb://users-ws
+spring.cloud.gateway.routes[3].predicates[0]=Path=/users-ws/users/**
+spring.cloud.gateway.routes[3].predicates[1]=Method=GET,PUT,DELETE
+spring.cloud.gateway.routes[3].predicates[2]=Header=Authorization, Bearer (.*)
+spring.cloud.gateway.routes[3].filters[0]=RemoveRequestHeader=Cookie
+spring.cloud.gateway.routes[3].filters[1]=AuthHeaderFilter
+spring.cloud.gateway.routes[3].filters[2]=RewritePath=/users-ws/(?<segment>.*), /$\{segment}
