Setting Config Server

--- a/config-server/src/main/resources/application.properties
+++ b/config-server/src/main/resources/application.properties
@@ -1,5 +1,17 @@
 spring.application.name=SCAConfigServer
 server.port=8012
 
-spring.cloud.config.server.git.uri=
-spring.cloud.config.server.git.clone-on-start=true
+spring.profiles.active=native
+spring.cloud.config.server.native.search-locations=file:///X:/Spring Projects/SCAConfigNative
+
+#spring.profiles.active=git
+#spring.cloud.config.server.git.uri=https://github.com/eartar/SCAConfig
+#spring.cloud.config.server.git.clone-on-start=true
+#spring.cloud.config.server.git.default-label=main
+
+management.endpoints.web.exposure.include=bus-refresh
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
