--- a/accs-service/src/main/resources/application.properties
+++ b/accs-service/src/main/resources/application.properties
@@ -3,3 +3,8 @@ server.port=0
 
 spring.application.name=account-ws
 spring.devtools.restart.enabled=true
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
