--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -7,6 +7,14 @@ token.secret = verysecret234secret23isthe2109secretest0294secret99292
 #spring.cloud.gateway.discovery.locator.enabled=true
 #spring.cloud.gateway.discovery.locator.lower-case-service-id=true
 
+#spring boot actuator endpoints
+management.endpoints.web.exposure.include=beans,health,routes,httptrace
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+
 #route will happen only if both predicate conditions are correct
 spring.cloud.gateway.routes[0].id=users-status-check
 spring.cloud.gateway.routes[0].uri=lb://users-ws
