--- a/users-service/src/main/resources/application.properties
+++ b/users-service/src/main/resources/application.properties
@@ -6,13 +6,19 @@ spring.devtools.restart.enabled=true
 eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
 spring.h2.console.enabled=true
 
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+
 #to allow spring cloud connection
 spring.h2.console.settings.web-allow-others=true
 
+# moved to config server native folder
 spring.datasource.url= jdbc:h2:mem:testdb
 
 gateway.ip=192.168.1.24
 #10 days in miliseconds
-token.expiration_time = 864000000
+token.expiration_time = 8640000001
 token.secret = verysecret234secret23isthe2109secretest0294secret99292
 login.url.path=/users/login
