--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -4,11 +4,14 @@ server.port=8082
 
 spring.application.name=api-gateway
 token.secret = verysecret234secret23isthe2109secretest0294secret99292
-#spring.cloud.gateway.discovery.locator.enabled=true
-#spring.cloud.gateway.discovery.locator.lower-case-service-id=true
+spring.cloud.gateway.discovery.locator.enabled=true
+spring.cloud.gateway.discovery.locator.lower-case-service-id=true
 
 #spring boot actuator endpoints
-management.endpoints.web.exposure.include=beans,health,routes,httptrace
+management.endpoints.web.exposure.include=*
+
+spring.security.user.name=user
+spring.security.user.password=123123
 
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
