--- a/config-server/src/main/resources/application.properties
+++ b/config-server/src/main/resources/application.properties
@@ -15,3 +15,9 @@ spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
+
+#encrypt.key=thisIsForSymmetricEncryption
+
+encrypt.key-store.location=file:///X:/Spring Projects/apiEncryptionKey.jks
+encrypt.key-store.password=pass123
+encrypt.key-store.alias=SCAEncryptionKey
