--- a/users-service/src/main/resources/application.properties
+++ b/users-service/src/main/resources/application.properties
@@ -6,6 +6,8 @@ spring.devtools.restart.enabled=true
 eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
 spring.h2.console.enabled=true
 
+management.endpoints.web.exposure.include=*
+
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
@@ -15,10 +17,16 @@ spring.rabbitmq.password=guest
 spring.h2.console.settings.web-allow-others=true
 
 # moved to config server native folder
-spring.datasource.url= jdbc:h2:mem:testdb
+#spring.datasource.url= jdbc:h2:mem:testdb
+#spring.datasource.url= jdbc:mysql://localhost:3306/scadb?serverTimezone=UTC
+#spring.datasource.username=eartar
+#spring.datasource.password=239323
+#spring.jpa.hibernate.ddl-auto=update
 
 gateway.ip=192.168.1.24
-#10 days in miliseconds
+
+#will be overridden by remote config files
 token.expiration_time = 8640000001
+
 token.secret = verysecret234secret23isthe2109secretest0294secret99292
 login.url.path=/users/login
