--- a/config-server/pom.xml
+++ b/config-server/pom.xml
@@ -39,6 +39,14 @@
             <artifactId>spring-cloud-starter-bus-amqp</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+        <groupId>org.springframework.security</groupId>
+        <artifactId>spring-security-rsa</artifactId>
+    </dependency>
     </dependencies>
 
     <dependencyManagement>
