--- a/users-service/src/main/resources/application.properties
+++ b/users-service/src/main/resources/application.properties
@@ -16,6 +16,8 @@ spring.rabbitmq.password=guest
 #to allow spring cloud connection
 spring.h2.console.settings.web-allow-others=true
 
+logging.level.com.eartar.usersservice.data.AlbumsServiceClient=DEBUG
+
 # moved to config server native folder
 #spring.datasource.url= jdbc:h2:mem:testdb
 #spring.datasource.url= jdbc:mysql://localhost:3306/scadb?serverTimezone=UTC
