--- a/users-service/src/main/resources/application.properties
+++ b/users-service/src/main/resources/application.properties
@@ -18,6 +18,14 @@ spring.h2.console.settings.web-allow-others=true
 
 logging.level.com.eartar.usersservice.data.AlbumsServiceClient=DEBUG
 
+feign.hystrix.enabled=true
+
+spring.zipkin.base-url=http://localhost:9411
+spring.zipkin.sender.type=web
+spring.sleuth.sampler.probability=1
+
+logging.file.name=users-ws.log
+
 # moved to config server native folder
 #spring.datasource.url= jdbc:h2:mem:testdb
 #spring.datasource.url= jdbc:mysql://localhost:3306/scadb?serverTimezone=UTC
