--- a/config-server/src/main/resources/bootstrap.properties
+++ b/config-server/src/main/resources/bootstrap.properties
@@ -1,1 +1,3 @@
-encrypt.key=thisIsForSymmetricEncryption
+encrypt.key-store.location=classpath:apiEncryptionKey.jks
+encrypt.key-store.password=pass123
+encrypt.key-store.alias=SCAEncryptionKey
