--- a/discovery-server/pom.xml
+++ b/discovery-server/pom.xml
@@ -9,7 +9,7 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.eartar</groupId>
-    <artifactId>eurekadisc</artifactId>
+    <artifactId>discovery-server</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>discovery-server</name>
     <description>Demo Project NetflixOSS Eureka</description>
