--- a/albums-service/pom.xml
+++ b/albums-service/pom.xml
@@ -5,18 +5,18 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.2.RELEASE</version>
+        <version>2.3.6.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.appsdeveloperblog.photoapp.api.albums</groupId>
-    <artifactId>PhotoAppApiAlbums</artifactId>
+    <groupId>com.eartar</groupId>
+    <artifactId>albums-service</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>PhotoAppApiAlbums</name>
-    <description>Demo project for Spring Boot</description>
+    <name>CloudAppAlbums</name>
+    <description>Cloud App Albums Microservice</description>
 
     <properties>
-        <java.version>1.8</java.version>
-        <spring-cloud.version>Greenwich.RELEASE</spring-cloud.version>
+        <java.version>11</java.version>
+        <spring-cloud.version>Hoxton.SR9</spring-cloud.version>
     </properties>
 
     <dependencies>
@@ -29,10 +29,11 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
-                                 
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
+            <scope>runtime</scope>
             <optional>true</optional>
         </dependency>
         
@@ -57,6 +58,14 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <!-- -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-config</artifactId>
+        </dependency>
+
+
     </dependencies>
         
     <dependencyManagement>
