--- a/config-server/src/main/resources/application.properties
+++ b/config-server/src/main/resources/application.properties
@@ -1,16 +1,15 @@
 spring.application.name=SCAConfigServer
 server.port=8012
 
-spring.profiles.active=native
-spring.cloud.config.server.native.search-locations=file:///X:/Spring Projects/SCAConfigNative
+#spring.profiles.active=native
+#spring.cloud.config.server.native.search-locations=file:///X:/Spring Projects/SCAConfigNative
 
-#spring.profiles.active=git
-#spring.cloud.config.server.git.uri=https://github.com/eartar/SCAConfig
-#spring.cloud.config.server.git.clone-on-start=true
-#spring.cloud.config.server.git.default-label=main
+spring.profiles.active=git
+spring.cloud.config.server.git.uri=https://github.com/eartar/SCAConfig
+spring.cloud.config.server.git.clone-on-start=true
+spring.cloud.config.server.git.default-label=main
 
 management.endpoints.web.exposure.include=bus-refresh
-
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
@@ -18,6 +17,6 @@ spring.rabbitmq.password=guest
 
 #encrypt.key=thisIsForSymmetricEncryption
 
-encrypt.key-store.location=file:///X:/Spring Projects/apiEncryptionKey.jks
-encrypt.key-store.password=pass123
-encrypt.key-store.alias=SCAEncryptionKey
+#encrypt.key-store.location=file:///X:/Spring Projects/apiEncryptionKey.jks
+#encrypt.key-store.password=pass123
+#encrypt.key-store.alias=SCAEncryptionKey
