--- a/users-service/pom.xml
+++ b/users-service/pom.xml
@@ -9,7 +9,7 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.eartar</groupId>
-    <artifactId>cloudappusers</artifactId>
+    <artifactId>users-service</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>CloudAppUsers</name>
     <description>Cloud App Users Microservice</description>
@@ -96,11 +96,16 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
         </dependency>
+        <!--
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-sleuth-zipkin</artifactId>
         </dependency>
-
+-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
 
     </dependencies>
 
