--- a/users-service/src/main/resources/application.properties
+++ b/users-service/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+
+
 #managed by app
 server.port=${PORT:0}
 
@@ -20,20 +22,23 @@ logging.level.com.eartar.usersservice.data.AlbumsServiceClient=DEBUG
 
 feign.hystrix.enabled=true
 
-spring.zipkin.base-url=http://localhost:9411
-spring.zipkin.sender.type=web
-spring.sleuth.sampler.probability=1
+#spring.zipkin.base-url=http://localhost:9411
+#spring.zipkin.sender.type=web
+#spring.sleuth.sampler.probability=1
 
 logging.file.name=users-ws.log
 
 # moved to config server native folder
 #spring.datasource.url= jdbc:h2:mem:testdb
-#spring.datasource.url= jdbc:mysql://localhost:3306/scadb?serverTimezone=UTC
+#spring.datasource.url=jdbc:mysql://localhost:3306/photos?serverTimezone=UTC
+spring.datasource.url= jdbc:mysql://localhost:3306/scadb?serverTimezone=UTC
 #spring.datasource.username=eartar
-#spring.datasource.password=239323
-#spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.password=eartar
+spring.datasource.username=root
+spring.datasource.password=239323
+spring.jpa.hibernate.ddl-auto=update
 
-gateway.ip=192.168.1.24
+server.error.include-message = always
 
 #will be overridden by remote config files
 token.expiration_time = 8640000001
