--- a/users-service/src/main/resources/bootstrap.properties
+++ b/users-service/src/main/resources/bootstrap.properties
@@ -1,2 +1,3 @@
-spring.cloud.config.uri=http://localhost:8012
+#spring.cloud.config.uri=http://localhost:8012
+spring.cloud.config.uri=http://172.31.26.120:8012
 spring.cloud.config.name=SCAConfigServer
