--- a/users-service/src/main/resources/application.properties
+++ b/users-service/src/main/resources/application.properties
@@ -8,6 +8,10 @@ spring.devtools.restart.enabled=true
 eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
 spring.h2.console.enabled=true
 
+authorization.token.header.name = Authorization
+authorization.token.header.prefix = Bearer
+token.secret = verysecret234secret23isthe2109secretest0294secret99292
+
 management.endpoints.web.exposure.include=*
 
 spring.rabbitmq.host=localhost
@@ -43,5 +47,4 @@ server.error.include-message = always
 #will be overridden by remote config files
 token.expiration_time = 8640000001
 
-token.secret = verysecret234secret23isthe2109secretest0294secret99292
 login.url.path=/users/login
